# pokedex

./: .tarpaulin.toml  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: release.yml  test.yml
src/: app.rs  event.rs  main.rs
src/api/: client.rs  endpoints.rs
src/models/: battle.rs  mod.rs  pokemon.rs  team.rs  type_data.rs
src/sprite/: renderer.rs
src/ui/: battle_simulator.rs  mod.rs  pokemon_detail.rs  pokemon_list.rs  team_builder.rs  type_chart.rs
