[package]
name = "pokedex"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
anyhow = "1"
dirs = "6"

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"
